--- a/GameEngine_Suneel/GameEngine_Suneel.vcxproj
+++ b/GameEngine_Suneel/GameEngine_Suneel.vcxproj
@@ -137,9 +137,13 @@
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Systems\RenderingSystems.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ECS.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Components.h" />
+    <ClInclude Include="Systems\RenderingSystems.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
