--- a/GameEngine_Suneel/GameEngine_Suneel.vcxproj.filters
+++ b/GameEngine_Suneel/GameEngine_Suneel.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Systems\RenderingSystem.cpp">
       <Filter>Header Files\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="Systems\AnimationSystem.cpp">
+      <Filter>Header Files\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Systems\RenderingSystem.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="Systems\AnimationSystem.h">
       <Filter>Header Files\Systems</Filter>
     </ClInclude>
   </ItemGroup>
