--- a/GameEngine_Suneel/GameEngine_Suneel.vcxproj
+++ b/GameEngine_Suneel/GameEngine_Suneel.vcxproj
@@ -76,7 +76,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>../packages/sfml-2.5.1/lib;$(LibraryPath)</LibraryPath>
     <IncludePath>../packages/sfml-2.5.1/include;$(IncludePath)</IncludePath>
-    <OutDir>$(SolutionDir)$(ProjectName)\lib</OutDir>
+    <OutDir>$(SolutionDir)GameEngine_Suneel\lib</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -139,6 +139,9 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Systems\AnimationSystem.cpp" />
+    <ClCompile Include="Systems\InputSystem.cpp" />
+    <ClCompile Include="Systems\MovementSystem.cpp" />
+    <ClCompile Include="Systems\PhysicsSystem.cpp" />
     <ClCompile Include="Systems\RenderingSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +149,9 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Components.h" />
     <ClInclude Include="Systems\AnimationSystem.h" />
+    <ClInclude Include="Systems\InputSystem.h" />
+    <ClInclude Include="Systems\MovementSystem.h" />
+    <ClInclude Include="Systems\PhysicsSystem.h" />
     <ClInclude Include="Systems\RenderingSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
