--- a/GameEngine_Suneel/GameEngine_Suneel.vcxproj
+++ b/GameEngine_Suneel/GameEngine_Suneel.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Interface\MainCamera.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Systems\AnimationSystem.cpp" />
     <ClCompile Include="Systems\InputSystem.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="ECS.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Components.h" />
+    <ClInclude Include="Interface\MainCamera.h" />
     <ClInclude Include="Systems\AnimationSystem.h" />
     <ClInclude Include="Systems\InputSystem.h" />
     <ClInclude Include="Systems\MovementSystem.h" />
