--- a/GameEngine_Suneel/GameEngine_Suneel.vcxproj.filters
+++ b/GameEngine_Suneel/GameEngine_Suneel.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Tile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Systems\TileMapSystem.cpp">
+      <Filter>Header Files\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -106,6 +109,9 @@
     </ClInclude>
     <ClInclude Include="Tile.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Systems\TileMapSystem.h">
+      <Filter>Header Files\Systems</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
